--- a/_config.yml
+++ b/_config.yml
@@ -4,18 +4,20 @@ description: > # this means to ignore newlines until "baseurl:"
 
 
 
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://zhuozhang.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: ""
+# the subpath of your site, e.g. /blog
+url: "http://zhuozhang.github.io"
+# the base hostname & protocol for your site, e.g. http://example.com
 url:            https://zhuozhang.github.io
-baseurl:        /
+baseurl:        ''
 
 author:
   name:         'Zhuo Zhang'
   url:          https://zhuozhang.github.io
   email:        zhangzhuo dot nju at gmail dot com
   
-github:
-  repo:         https://github.com/zhuozhang
+# github:
+#   repo:         https://github.com/zhuozhang
 
 linkedin:
   url:          https://www.linkedin.com/in/zhuo-zhang-55813379
@@ -23,6 +25,7 @@ linkedin:
 exclude:        [_*~]
 
 # Build settings
+# repository: zhuozhang/zhuozhang.github.io
 markdown: kramdown
 theme: minima
 gems:
