--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ description: > # this means to ignore newlines until "baseurl:"
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://zhuozhang.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-url:            https://zhuozhang.github.io
-baseurl:        /
+# url:            https://zhuozhang.github.io
+# baseurl:        /
 
 author:
   name:         'Zhuo Zhang'
