--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: > # this means to ignore newlines until "baseurl:"
 
 
 
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://zhuozhang.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # url:            https://zhuozhang.github.io
 # baseurl:        /
