--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,11 @@ description: > # this means to ignore newlines until "baseurl:"
 
 
 
-baseurl: "/" # the subpath of your site, e.g. /blog
-url: "http://zhuozhang.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-# url:            https://zhuozhang.github.io
-# baseurl:        /
+# baseurl: "/" # the subpath of your site, e.g. /blog
+# url: "http://zhuozhang.github.io" # the base hostname & protocol for your site, 
+e.g. http://example.com
+url:            https://zhuozhang.github.io
+baseurl:        /
 
 author:
   name:         'Zhuo Zhang'
@@ -18,7 +19,7 @@ github:
   repo:         https://github.com/zhuozhang
 
 linkedin:
-  url:          https://www.linkedin.com/in/zhuo-zhang-55813379
+  url:          https://www.linkedin.com/in/zhuo-zhang-usc
 
 exclude:        [_*~]
 
